testdata/language-features/guard/guard12.reject.out
type error: can not unify
[32m'Char[m
with
[32m'Tuple0[m

in testdata/language-features/guard/guard12.reject.lc:1:13:
fun x | x = () | otherwise = 'a'
            ^^
