testdata/language-features/guard/guard12.reject.lc
fun x | x = () | otherwise = 'a'